sdk/consumption/arm-consumption/samples/v9/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                          |
| ------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [aggregatedCostGetByManagementGroupSample.js][aggregatedcostgetbymanagementgroupsample]                                               | Provides the aggregate cost of a management group and all child management groups by current billing period. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/AggregatedCostByManagementGroup.json                                                                                                        |
| [aggregatedCostGetForBillingPeriodByManagementGroupSample.js][aggregatedcostgetforbillingperiodbymanagementgroupsample]               | Provides the aggregate cost of a management group and all child management groups by specified billing period x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/AggregatedCostForBillingPeriodByManagementGroup.json                                                                                       |
| [balancesGetByBillingAccountSample.js][balancesgetbybillingaccountsample]                                                             | Gets the balances for a scope by billingAccountId. Balances are available via this API only for May 1, 2014 or later. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/BalancesByBillingAccount.json                                                                                                      |
| [balancesGetForBillingPeriodByBillingAccountSample.js][balancesgetforbillingperiodbybillingaccountsample]                             | Gets the balances for a scope by billing period and billingAccountId. Balances are available via this API only for May 1, 2014 or later. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/BalancesByBillingAccountForBillingPeriod.json                                                                   |
| [budgetsCreateOrUpdateSample.js][budgetscreateorupdatesample]                                                                         | The operation to create or update a budget. You can optionally provide an eTag if desired as a form of concurrency control. To obtain the latest eTag for a given budget, perform a get operation prior to your put operation. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/CreateOrUpdateBudget.json |
| [budgetsDeleteSample.js][budgetsdeletesample]                                                                                         | The operation to delete a budget. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/DeleteBudget.json                                                                                                                                                                                                      |
| [budgetsGetSample.js][budgetsgetsample]                                                                                               | Gets the budget for the scope by budget name. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/Budget.json                                                                                                                                                                                                |
| [budgetsListSample.js][budgetslistsample]                                                                                             | Lists all budgets for the defined scope. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/BudgetsList.json                                                                                                                                                                                                |
| [chargesListSample.js][chargeslistsample]                                                                                             | Lists the charges based for the defined scope. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ChargesForBillingPeriodByDepartment.json                                                                                                                                                                  |
| [creditsGetSample.js][creditsgetsample]                                                                                               | The credit summary by billingAccountId and billingProfileId. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/CreditSummaryByBillingProfile.json                                                                                                                                                          |
| [eventsListByBillingAccountSample.js][eventslistbybillingaccountsample]                                                               | Lists the events that decrements Azure credits or Microsoft Azure consumption commitment for a billing account or a billing profile for a given start and end date. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/EventsGetByBillingAccount.json                                                       |
| [eventsListByBillingProfileSample.js][eventslistbybillingprofilesample]                                                               | Lists the events that decrements Azure credits or Microsoft Azure consumption commitment for a billing account or a billing profile for a given start and end date. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/EventsListByBillingProfile.json                                                      |
| [lotsListByBillingAccountSample.js][lotslistbybillingaccountsample]                                                                   | Lists all Azure credits and Microsoft Azure consumption commitments for a billing account or a billing profile. Microsoft Azure consumption commitments are only supported for the billing account scope. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/LotsListByBillingAccount.json                  |
| [lotsListByBillingProfileSample.js][lotslistbybillingprofilesample]                                                                   | Lists all Azure credits and Microsoft Azure consumption commitments for a billing account or a billing profile. Microsoft Azure consumption commitments are only supported for the billing account scope. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/LotsListByBillingProfile.json                  |
| [marketplacesListSample.js][marketplaceslistsample]                                                                                   | Lists the marketplaces for a scope at the defined scope. Marketplaces are available via this API only for May 1, 2014 or later. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/MarketplacesByBillingAccountList.json                                                                                    |
| [priceSheetGetByBillingPeriodSample.js][pricesheetgetbybillingperiodsample]                                                           | Get the price sheet for a scope by subscriptionId and billing period. Price sheet is available via this API only for May 1, 2014 or later. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/PriceSheetExpand.json                                                                                         |
| [priceSheetGetSample.js][pricesheetgetsample]                                                                                         | Gets the price sheet for a subscription. Price sheet is available via this API only for May 1, 2014 or later. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/PriceSheet.json                                                                                                                            |
| [reservationRecommendationDetailsGetSample.js][reservationrecommendationdetailsgetsample]                                             | Details of a reservation recommendation for what-if analysis of reserved instances. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationRecommendationDetailsByBillingAccount.json                                                                                                                |
| [reservationRecommendationsListSample.js][reservationrecommendationslistsample]                                                       | List of recommendations for purchasing reserved instances. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationRecommendationsByBillingAccount.json                                                                                                                                               |
| [reservationTransactionsListByBillingProfileSample.js][reservationtransactionslistbybillingprofilesample]                             | List of transactions for reserved instances on billing account scope x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationTransactionsListByBillingProfileId.json                                                                                                                                  |
| [reservationTransactionsListSample.js][reservationtransactionslistsample]                                                             | List of transactions for reserved instances on billing account scope x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationTransactionsListByEnrollmentNumber.json                                                                                                                                  |
| [reservationsDetailsListByReservationOrderAndReservationSample.js][reservationsdetailslistbyreservationorderandreservationsample]     | Lists the reservations details for provided date range. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationDetailsWithReservationId.json                                                                                                                                                         |
| [reservationsDetailsListByReservationOrderSample.js][reservationsdetailslistbyreservationordersample]                                 | Lists the reservations details for provided date range. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationDetails.json                                                                                                                                                                          |
| [reservationsDetailsListSample.js][reservationsdetailslistsample]                                                                     | Lists the reservations details for the defined scope and provided date range. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationDetailsByBillingAccountId.json                                                                                                                                  |
| [reservationsSummariesListByReservationOrderAndReservationSample.js][reservationssummarieslistbyreservationorderandreservationsample] | Lists the reservations summaries for daily or monthly grain. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationSummariesDailyWithReservationId.json                                                                                                                                             |
| [reservationsSummariesListByReservationOrderSample.js][reservationssummarieslistbyreservationordersample]                             | Lists the reservations summaries for daily or monthly grain. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationSummariesDaily.json                                                                                                                                                              |
| [reservationsSummariesListSample.js][reservationssummarieslistsample]                                                                 | Lists the reservations summaries for the defined scope daily or monthly grain. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/ReservationSummariesDailyWithBillingAccountId.json                                                                                                                        |
| [tagsGetSample.js][tagsgetsample]                                                                                                     | Get all available tag keys for the defined scope x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/Tags.json                                                                                                                                                                                               |
| [usageDetailsListSample.js][usagedetailslistsample]                                                                                   | Lists the usage details for the defined scope. Usage details are available via this API only for May 1, 2014 or later. x-ms-original-file: specification/consumption/resource-manager/Microsoft.Consumption/stable/2021-10-01/examples/UsageDetailsListByBillingAccount.json                                                                                             |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node aggregatedCostGetByManagementGroupSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env CONSUMPTION_SUBSCRIPTION_ID="<consumption subscription id>" CONSUMPTION_SUBSCRIPTION_ID="<consumption subscription id>" node aggregatedCostGetByManagementGroupSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[aggregatedcostgetbymanagementgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/aggregatedCostGetByManagementGroupSample.js
[aggregatedcostgetforbillingperiodbymanagementgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/aggregatedCostGetForBillingPeriodByManagementGroupSample.js
[balancesgetbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/balancesGetByBillingAccountSample.js
[balancesgetforbillingperiodbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/balancesGetForBillingPeriodByBillingAccountSample.js
[budgetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/budgetsCreateOrUpdateSample.js
[budgetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/budgetsDeleteSample.js
[budgetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/budgetsGetSample.js
[budgetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/budgetsListSample.js
[chargeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/chargesListSample.js
[creditsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/creditsGetSample.js
[eventslistbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/eventsListByBillingAccountSample.js
[eventslistbybillingprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/eventsListByBillingProfileSample.js
[lotslistbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/lotsListByBillingAccountSample.js
[lotslistbybillingprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/lotsListByBillingProfileSample.js
[marketplaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/marketplacesListSample.js
[pricesheetgetbybillingperiodsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/priceSheetGetByBillingPeriodSample.js
[pricesheetgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/priceSheetGetSample.js
[reservationrecommendationdetailsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationRecommendationDetailsGetSample.js
[reservationrecommendationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationRecommendationsListSample.js
[reservationtransactionslistbybillingprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationTransactionsListByBillingProfileSample.js
[reservationtransactionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationTransactionsListSample.js
[reservationsdetailslistbyreservationorderandreservationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationsDetailsListByReservationOrderAndReservationSample.js
[reservationsdetailslistbyreservationordersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationsDetailsListByReservationOrderSample.js
[reservationsdetailslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationsDetailsListSample.js
[reservationssummarieslistbyreservationorderandreservationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationsSummariesListByReservationOrderAndReservationSample.js
[reservationssummarieslistbyreservationordersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationsSummariesListByReservationOrderSample.js
[reservationssummarieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/reservationsSummariesListSample.js
[tagsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/tagsGetSample.js
[usagedetailslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v9/javascript/usageDetailsListSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-consumption?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/consumption/arm-consumption/README.md
